# python-microservice-template

./: .env.example  README.md  pyproject.toml  setup.cfg
source/products/adapters/controllers/: __init__.py
source/products/adapters/handlers/: __init__.py
source/products/adapters/loggers/: print.py
source/products/adapters/repositories/fake/: dummy.py
source/products/application/: fake_use_case.py
source/products/domain/: fake.py
source/products/infrastructure/: settings.py
source/products/ports/: logger.py
source/products/ports/repositories/: fake_repository.py
source/users/adapters/loggers/: print.py
source/users/adapters/repositories/fake/: dummy.py
source/users/application/: fake_use_case.py
source/users/ports/repositories/: fake_repository.py
