[tool.poetry]
name = "source"
version = "0.1.0"
description = "Base template for python micro-services"
authors = ["Esteban Solorzano <estebansolorzano27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
unimport = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
unimport = "^0.12.1"
libcst = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["source", "tests"]
multi_line_output = 5
combine_as_imports = true
include_trailing_comma = false